refactored with AssertJ